@@ -1,3 +1,8 @@
+2008-06-21  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/conversion.R (get.adjacency) : 'sparse' 
+	argument added
+
 2008-06-20  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/conversion.R (igraph.from.graphNEL)
